Sample image links changed

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     </div>
 
     <div class="item">
-      <img src="https://hd.unsplash.com/photo-1468596687970-84b4dfd76305" alt="Chania">
+      <img src="https://hd.unsplash.com/photo-1458576627435-430ad58ead3b" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="http://unsplash.com/photos/YrtFlrLo2DQ/download" alt="Flower">
+      <img src="https://hd.unsplash.com/photo-1471664003401-92a303090b54" alt="Flower">
     </div>
 
     <div class="item">
