--- a/index.html
+++ b/index.html
@@ -85,9 +85,17 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+    <h1 class="text-center"> Events </h1>
+    <hr>
+    <div class="events-wrapper">
 
+    </div>
+    <div class="instagram-feed">
 
+    </div>
+    <div class="footer">
 
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
