--- a/index.html
+++ b/index.html
@@ -85,16 +85,15 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-    <h1 class="text-center"> Events </h1>
-    <hr>
     <div class="events-wrapper">
+      <div class="row">
+        <div class="col-xs-6 events">
+          <h3>Test</h3>
+        </div>
+        <div class="col-xs-6 events">
 
-    </div>
-    <div class="instagram-feed">
-
-    </div>
-    <div class="footer">
-
+        </div>
+      </div>
     </div>
 
 
