--- a/index.html
+++ b/index.html
@@ -46,56 +46,7 @@
         </ul>
       </div>
     </div>
-    <!-- MAIN CONTENT -->
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="https://hd.unsplash.com/photo-1446822775955-c34f483b410b" alt="Chania">
-    </div>
-
-    <div class="item">
-      <img src="https://hd.unsplash.com/photo-1458576627435-430ad58ead3b" alt="Chania">
-    </div>
-
-    <div class="item">
-      <img src="https://hd.unsplash.com/photo-1471664003401-92a303090b54" alt="Flower">
-    </div>
-
-    <div class="item">
-      <img src="http://unsplash.com/photos/8ywPTZbTCCk/download" alt="Flower">
-    </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-    <div class="events-wrapper">
-      <div class="row">
-        <div class="col-xs-6 events">
-          <h3>Test</h3>
-        </div>
-        <div class="col-xs-6 events">
-
-        </div>
-      </div>
-    </div>
-
+    <!-- NAVIGATION END -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
