Header image temporary

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         </ul>
       </div>
     </div>
-    <!-- NAVIGATION END -->
+    <!-- SLider -->
+    <div class="slide">
+      <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
