--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
       </div>
     </div>
     <!-- SLider -->
-    <div class="slide">
-      <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="slide">
+          <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
+        </div>
+      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
