--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </div>
       </div>
     </div>
+    <!-- Content -->
+    <div class="container event">
+      <h1> Events </h1>
+      <hr>
+
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
