omg width to 100%

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="slide">
-          <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
+          <img src="img/goddess.png" alt="goddess logo" class="goddess-header" width="100%">
         </div>
       </div>
     </div>
