Slide width fixes

--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
       </div>
     </div>
     <!-- SLider -->
-    <div class="row">
-      <div class="col-xs-12">
+
         <div class="slide">
-          <img src="img/goddess.png" alt="goddess logo" class="goddess-header" width="100%">
+          <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
         </div>
-      </div>
-    </div>
+
     <!-- Content -->
     <div class="container event">
       <h1> Events </h1>
