--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Content -->
     <div class="container event">
       <h1> Events </h1>
-      <hr>
+      <hr class="style18">
 
     </div>
 
