event section test

--- a/index.html
+++ b/index.html
@@ -47,12 +47,26 @@
       </div>
     </div>
     <!-- SLider -->
-    
+
         <div class="slide">
           <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
         </div>
 
     <!-- Content -->
+    <div class="event-section">
+      <div class="row">
+        <div class="col-xs-6 event-entry">
+          <div class="event-date"><strong>10 / 21</strong></div>
+          <div class="event-subtitle">Back to the 80's </div>
+          <div class="event-reserve">Reserve</div>
+        </div>
+        <div class="col-xs-6 event-entry">
+          <div class="event-date"><strong>10 / 21</strong></div>
+          <div class="event-subtitle">Back to the 80's </div>
+          <div class="event-reserve">Reserve</div>
+        </div>
+      </div>
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
