event caption done

--- a/index.html
+++ b/index.html
@@ -56,21 +56,18 @@
     <div class="event-section">
       <div class="row">
         <div class="col-xs-6 event-entry event-entry-1">
-          <div class="event-caption">
             <div class="event-date"><strong>10 / 21</strong></div>
             <div class="event-subtitle">Back to the 80's </div>
             <div class="event-reserve">Reserve</div>
-          </div>
         </div>
         <div class="col-xs-6 event-entry event-entry-2">
-          <div class="event-caption">
-            <div class="event-date"><strong>10 / 21</strong></div>
-            <div class="event-subtitle">Back to the 80's </div>
+            <div class="event-date"><strong>11 / 5</strong></div>
+            <div class="event-subtitle">Halloween </div>
             <div class="event-reserve">Reserve</div>
           </div>
         </div>
       </div>
-    </div>
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
