--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
       </div>
     </div>
     <!-- SLider -->
-
+    <div class="main">
         <div class="slide">
           <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
         </div>
-
+    </div>
     <!-- Content -->
     <div class="event-section">
       <div class="row">
