Removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </ul>
       </div>
     </div>
+    <div class="content-wrapper">
     <!-- SLider -->
     <div class="main">
         <div class="slide">
@@ -67,7 +68,8 @@
           </div>
         </div>
       </div>
-
+      <!-- Content Wrapper -->
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
