temporary event fix

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- SLider -->
     <div class="main">
         <div class="slide">
-          <img src="img/goddess.png" alt="goddess logo" class="goddess-header">
+          <img src="img/goddess.png" alt="goddess logo" height="200px"class="goddess-header">
         </div>
     </div>
     <!-- Content -->
