--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
         </div>
     </div>
     <!-- Content -->
-    
+    <div class="event-section">
+      <div class="row">
+        <div class="col-xs-6 event event-entry-2">
+
+        </div>
+        <div class="col-xs-6 event event-entry-1">
+
+        </div>
+      </div>
+    </div>
       <!-- Content Wrapper -->
     </div>
 
