changed to col-xs-12 instead of 100% width

--- a/index.html
+++ b/index.html
@@ -48,19 +48,23 @@
     </div>
     <div class="content-wrapper">
     <!-- SLider -->
-    <div class="main">
-        <div class="slide">
+    <div class="main row">
+        <div class="slide col-xs-12">
           <img src="img/goddess.png" alt="goddess logo" height="200px"class="goddess-header">
         </div>
     </div>
     <!-- Content -->
     <div class="event-section">
       <div class="row">
-        <div class="col-xs-6 event event-entry-2">
-
-        </div>
         <div class="col-xs-6 event event-entry-1">
+          <div class="caption-bg">
 
+          </div>
+        </div>
+        <div class="col-xs-6 event event-entry-2">
+          <div class="caption-bg">
+
+          </div>
         </div>
       </div>
     </div>
