--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- NAVIGATION -->
-    <div id="container">
+    <div class="container-fluid">
       <div class="navT">
         <a href="index.html">
           <img src="img/goddess.png" height="100px" width="200px" id="logo">
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-xs-6 event event-entry-1">
           <div class="caption-bg">
-            
+
           </div>
         </div>
         <div class="col-xs-6 event event-entry-2">
