--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <!-- NAVIGATION -->
+    <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navT">
         <a href="index.html">
@@ -46,6 +47,7 @@
         </ul>
       </div>
     </div>
+  </nav>
     <div class="content-wrapper">
     <!-- SLider -->
     <div class="main row">
