--- a/index.html
+++ b/index.html
@@ -60,12 +60,28 @@
       <div class="row">
         <div class="col-xs-6 event event-entry-1">
           <div class="caption-bg">
-
+            <span class="event-date">
+              <p><strong> 10 / 21 </strong></p>
+            </span>
+            <span class="event-title">
+              <p> Back to the 80's </p>
+            </span>
+            <span class="event-reserve">
+              reserve
+            </span>
           </div>
         </div>
         <div class="col-xs-6 event event-entry-2">
           <div class="caption-bg">
-
+            <span class="event-date">
+              <p><strong> 11 / 11 </strong></p>
+            </span>
+            <span class="event-title">
+              <p> Halloween </p>
+            </span>
+            <span class="event-reserve">
+              reserve
+            </span>
           </div>
         </div>
       </div>
