--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         </div>
     </div>
     <!-- Content -->
-    <div class="event-section">
-      <div class="row">
-        <div class="col-xs-6 event event-entry-1">
-          <div class="caption-bg">
+    <div class="row">
+      <div class="event-section">
+        <div class="col-xs-12 event event-entry-1">
+          <div class="caption">
             <span class="event-date">
               <p><strong> 10 / 21 </strong></p>
             </span>
@@ -71,8 +71,8 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-6 event event-entry-2">
-          <div class="caption-bg">
+        <div class="col-xs-12 event event-entry-2">
+          <div class="caption">
             <span class="event-date">
               <p><strong> 11 / 11 </strong></p>
             </span>
