--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <!-- Content -->
     <div class="row">
       <div class="event-section">
-        <div class="col-xs-12 event event-entry-1">
+        <div class="col-xs-6 event event-entry-1">
           <div class="caption">
             <span class="event-date">
-              <p><strong> 10 / 21 </strong></p>
+              <strong> 10 / 21 </strong>
             </span>
             <span class="event-title">
               <p> Back to the 80's </p>
@@ -71,10 +71,10 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-12 event event-entry-2">
+        <div class="col-xs-6 event event-entry-2">
           <div class="caption">
             <span class="event-date">
-              <p><strong> 11 / 11 </strong></p>
+              <strong> 11 / 11 </strong>
             </span>
             <span class="event-title">
               <p> Halloween </p>
