--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div class="col-xs-6 event event-entry-1">
           <div class="caption">
             <span class="event-date">
-              <strong> 10 / 21 </strong>
+              <strong> 11 / 11 </strong>
             </span>
             <span class="event-title">
-              <p> Back to the 80's </p>
+              <p> Halloween </p>
             </span>
             <span class="event-reserve">
               reserve
@@ -74,10 +74,10 @@
         <div class="col-xs-6 event event-entry-2">
           <div class="caption">
             <span class="event-date">
-              <strong> 11 / 11 </strong>
+              <strong> 12 / 21 </strong>
             </span>
             <span class="event-title">
-              <p> Halloween </p>
+              <p> Christmas </p>
             </span>
             <span class="event-reserve">
               reserve
