--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <!-- NAVIGATION -->
+  <div class="wrapper">
     <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navT">
@@ -88,7 +89,7 @@
     </div>
       <!-- Content Wrapper -->
     </div>
-
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
