--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <span class="event-title">
               <p> Halloween </p>
             </span>
-            <span class="event-reserve">
+            <button class="event-reserve" type="button">
               reserve
-            </span>
+            </button>
           </div>
         </div>
         <div class="col-xs-6 event event-entry-2">
@@ -80,9 +80,9 @@
             <span class="event-title">
               <p> Christmas </p>
             </span>
-            <span class="event-reserve">
+            <button class="event-reserve" type="button">
               reserve
-            </span>
+            </button>
           </div>
         </div>
       </div>
