--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   </head>
   <body>
     <!-- NAVIGATION -->
-  <div class="wrapper">
     <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navT">
@@ -74,11 +73,25 @@
             </button>
           </div>
         </div>
+        <div class="col-xs-6 event event-entry-2">
+          <div class="caption">
+            <button class="event-reserve" type="button">
+              reserve
+            </button>
+          </div>
+        </div>
+        <div class="col-xs-6 event event-entry-2">
+          <div class="caption">
+            <button class="event-reserve" type="button">
+              reserve
+            </button>
+          </div>
+        </div>
       </div>
     </div>
       <!-- Content Wrapper -->
     </div>
-  </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
